--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -21,9 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PasswordHash)
-            </th>
+            @* <th> *@
+            @*     @Html.DisplayNameFor(model => model.PasswordHash) *@
+            @* </th> *@
             <th></th>
         </tr>
     </thead>
@@ -39,9 +39,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PasswordHash)
-            </td>
+            @* <td> *@
+            @*     @Html.DisplayFor(modelItem => item.PasswordHash) *@
+            @* </td> *@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.UserId">Details</a> |
