--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,20 +23,20 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Author" asp-action="Index">Author</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Author" asp-action="Index">Autorzy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Book</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Książki</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="BookLoan" asp-action="Index">Wypozyczenia</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="BookLoan" asp-action="Index">Wypożyczenia</a>
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="LibraryCard" asp-action="Index">Card</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="LibraryCard" asp-action="Index">Karta Czytelnika</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">User</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Czytelnicy</a>
                     </li>
 
                 </ul>
