--- a/Views/BookLoan/Details.cshtml
+++ b/Views/BookLoan/Details.cshtml
@@ -11,27 +11,35 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LoanDate)
+            @Html.DisplayNameFor(model => model.BookLoanId)
         </dt>
+        
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LoanDate)
+            @Html.DisplayFor(model => model.BookLoanId)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DueDate)
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RentalStarDate)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DueDate)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RentalEndDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RentalEndDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RentalEndDate)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Book)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Book.BookId)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.User)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.User.UserId)
         </dd>
     </dl>
