--- a/Views/LibraryCard/Create.cshtml
+++ b/Views/LibraryCard/Create.cshtml
@@ -18,11 +18,6 @@
                 <span asp-validation-for="CardNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ExpiryDate" class="control-label"></label>
-                <input asp-for="ExpiryDate" class="form-control" />
-                <span asp-validation-for="ExpiryDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
                 <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
@@ -36,4 +31,32 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+<script >
+ document.addEventListener("DOMContentLoaded", function () {
+        const form = document.querySelector("form");
+        const errorSpans = document.querySelectorAll(".field-validation-error");
+
+        form.addEventListener("submit", function (e) {
+            if (!validateCardNumber()) {
+                e.preventDefault();
+            }
+        });
+         function validateCardNumber() {
+                    const cardNumberInput = document.getElementById("CardNumber");
+        
+                    const cardNumberRegex = /^\d{10}$/;
+                    const cardNumber = cardNumberInput.value;
+        
+                    if (!cardNumberRegex.test(cardNumber)) {
+                        errorSpans[0].InnerHtml = "Numer karty musi zawierać dokładnie 10 cyfr.";
+                        return false;
+                    } else {
+                        errorSpans[0].InnerHtml = "";
+                        return true;
+                    }
+                }
+
+    });
+
+</script>
 
