--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -27,11 +27,7 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            @* <div class="form-group"> *@
-            @*     <label asp-for="PasswordHash" class="control-label"></label> *@
-            @*     <input asp-for="PasswordHash" class="form-control" /> *@
-            @*     <span asp-validation-for="PasswordHash" class="text-danger"></span> *@
-            @* </div> *@
+       
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -43,3 +39,56 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<script >
+ document.addEventListener("DOMContentLoaded", function () {
+        const form = document.querySelector("form");
+        const errorSpans = document.querySelectorAll(".field-validation-error");
+
+        form.addEventListener("submit", function (e) {
+           if (!validateFirstName()) e.preventDefault();
+           if (!validateLastName()) e.preventDefault();
+           if (!validateEmail()) e.preventDefault();
+
+
+                     
+                   
+        });
+         function validateFirstName() {
+                const firstNameInput = document.querySelector("#FirstName");
+        
+                if (firstNameInput.value.trim() === "") {
+                    errorSpans[0].innerHTML = "Imię użytkownika jest wymagane.";
+                    return false;
+                } else {
+                    errorSpans[0].innerHTML  = "";
+                    return true;
+                }
+            }
+        
+            function validateLastName() {
+                const lastNameInput = document.querySelector("#LastName");
+        
+                if (lastNameInput.value.trim() === "") {
+                   errorSpans[1].innerHTML = "Nazwisko użytkownika jest wymagane.";
+                    return false;
+                } else {
+                    errorSpans[1].innerHTML = "";
+                    return true;
+                }
+            }
+        
+            function validateEmail() {
+                const emailInput = document.querySelector("#Email");
+        
+        const emailRegex = /^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/;
+        
+                if (!emailRegex.test(emailInput.value)) {
+                   errorSpans[2].innerHTML = "Nieprawidłowy format adresu email.";
+                    return false;
+                } else {
+                   errorSpans[2].innerHTML  = "";
+                    return true;
+                }
+               }
+    });
+</script>
